client/webview/src/notethink-views/src/components/ViewRenderer.module.scss
/* ... */
//
// Generic Notes
//

.note {

  &.focused {
    outline: dashed 2px var(--mantine-primary-color-2);
    outline-offset: 6px;

    .note.focused {
      outline-offset: 2px;
    }
  }

  &.selected {
    // solid is the only change, but repeat the whole style for nodes that are selected without being focused
    outline: solid 2px var(--mantine-primary-color-2);
    outline-offset: 3px;
  }

  &.unclickable {
    // source selection colour from theme
    outline: solid 5px var(--mantine-primary-color-2);
    outline-offset: 0;
    cursor: default;
  }

  &.locked {
    outline-color: var(--mantine-color-red-outline);
    opacity: 0.5;
  }

  a {
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  .lineno {
    float: left;
    margin: 0 0 0 -1.7em;

    text-align: center;
    font-size: 70%;
    font-weight: bold;
    cursor: default;
    user-select: none;

    display: inline-block;
    line-height: 0;
    border-radius: 50%;
    border: 1px solid var(--mantine-color-default-border);
    color: color-mix(in srgb, var(--mantine-color-default-border), var(--mantine-color-default-color) 30%);
    background: var(--mantine-color-default);

    // set min width so that single-digit numbers are the same size as double-digit+ numbers
    min-width: 2.0em;
    // set position relative to give the line number a high implied z-index and lift over focused outline
    position: relative;

    > span {
      display: inline-block;
      padding-top: 50%;
      padding-bottom: 50%;
      margin-left: 3px;
      margin-right: 3px;
    }
  }

  .body {
    table, p {
      margin-top: 0.3em;
      margin-bottom: 0.5em;
    }

    pre {
      background: $off_grey;
      margin: 0 -1.0em 0 -1.0em;
      padding: 0.5em 0 0.5em 1.5em;
    }

    .readMoreToggle {
      display: block;
      font-size: 85%;
      color: var(--mantine-primary-color-filled, var(--mantine-primary-color-2));
      cursor: pointer;
      padding: 0.2em 0;
      user-select: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  .leafNote {
    &.addGutter {
      margin: 0 0 0 1.0em;
    }

    .lineno {
      font-size: 50%;
      margin-left: -3.0em;

      > span {
        margin-left: 2px;
        margin-right: 2px;
      }
    }
  }

  ul {
    // add margin to the top of the list, but not nested <ul> tags
    margin: 0.5em 0 0 0;

    > li {
      // explicitly set text-indent (to default) so that it doesn't inherit checkbox style for non-checkbox li tags
      text-indent: 0;

      // hide discs on todo items (that contain checkboxes), either in note or nested note
      &:has(> input[type=checkbox]), &:has(div > input[type=checkbox]) {
        list-style-type: none;
        text-indent: -1.6em;
      }

      input[type=checkbox] {
        appearance: none;
        width: 1em;
        height: 1em;
        margin-right: 0.4em;
        vertical-align: middle;
        border: 1px solid var(--vscode-checkbox-border, var(--mantine-color-default-border));
        border-radius: 3px;
        background: var(--vscode-checkbox-background, var(--mantine-color-default));
        cursor: pointer;
        position: relative;

        &:checked {
          background: var(--vscode-checkbox-selectBackground, var(--mantine-primary-color-2));
          border-color: var(--vscode-checkbox-selectBorder, var(--mantine-primary-color-2));

          &::after {
            content: '';
            position: absolute;
            left: 3px;
            top: 0px;
            width: 4px;
            height: 8px;
            border: solid var(--vscode-checkbox-foreground, #fff);
            border-width: 0 2px 2px 0;
            transform: rotate(45deg);
          }
        }
      }

      > ul, > div > ul, > div > div > ul {
        margin-top: 0;
      }
    }
  }

  table {
    display: block;
    width: max-content;
    max-width: 100%;
    overflow: auto;

    // mirror GitHub default styles
    border-spacing: 0;
    border-collapse: collapse;

    td, th {
      padding-left: 0.3em;
      padding-right: 0.3em;
      border: 1px solid var(--mantine-color-default-border);
    }

    tr {
      &:nth-child(2n) {
        background-color: $off_grey;
      }
    }
  }

}

[data-mantine-color-scheme='dark'] .view {
  .note, .leafNote {
    &.unclickable, &.focused, &.selected {
      outline-color: var(--mantine-primary-color-8);
    }
  }
}

// dark-mode: use a stronger border token so kanban cards/columns stand out from the background
[data-mantine-color-scheme='dark'] .viewKanban .board {
  .column {
    border-color: var(--vscode-editorWidget-border, var(--mantine-color-default-border));
  }
  .column > div > .note {
    border-color: var(--vscode-editorWidget-border, var(--mantine-color-default-border));
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);

    &:hover {
      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
    }

    &.dragging {
      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
    }

    > .headline {
      border-bottom-color: var(--vscode-editorWidget-border, var(--mantine-color-default-border));
    }
  }
}


// Code blocks (fenced ``` ... ```)

.codeBlock {
  position: relative;
  margin: 0.5em 0;
  border-radius: 6px;
  background: var(--vscode-textCodeBlock-background, $off_grey);
  border: 1px solid var(--mantine-color-default-border);
  overflow: hidden;

  pre {
    margin: 0;
    padding: 16px;
    overflow-x: auto;
    font-size: 13px;
    line-height: 1.45;

    code {
      font-family: var(--vscode-editor-font-family, ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, 'Liberation Mono', monospace);
      font-size: var(--vscode-editor-font-size, 13px);
      white-space: pre;
      word-wrap: normal;
      background: none;
      padding: 0;
      margin: 0;
      border: none;
    }
  }
}
/* ... */

